Minor fixes to Card alignment on presale page

--- a/crowdsale/css/style.css
+++ b/crowdsale/css/style.css
@@ -198,8 +198,8 @@ h1, h2, h3, h4, h5, h6, figure {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     background-color: white;
-    margin-top: 200px;
-    margin-left: 0;
+    margin: auto;
+    margin-top: 37%;
     width: 95%;
     z-index: 1;
 }
@@ -257,9 +257,6 @@ h1, h2, h3, h4, h5, h6, figure {
 @media screen and (max-width: 768px) {
   .countdown-wrap, .bg-cover {
     width: 100%;
-  }
-  .card {
-    margin-top: 10px;
   }
 }
 
